attempt to fix the annoying line overlap for 1920px screens

--- a/css/style.css
+++ b/css/style.css
@@ -2181,15 +2181,15 @@ h4.package {
         -ms-transform: rotate(-34deg);
         -webkit-transform: rotate(-34deg);
         transform: rotate(-34deg);
-        left: 1386px;
-        top: 138px;
+        left: 1092px;
+        top: 518px;
     }
     .contact-block {
         -ms-transform: rotate(-34deg);
         -webkit-transform: rotate(-34deg);
         transform: rotate(-34deg);
-        left: 1120px;
-        top: 510px;
+        left: 1386px;
+        top: 138px;
     }
     .name-block.reverse {
         width: 30%;
